--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "orangeguard-surveillance",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "Dashboard de vigilancia Orange Pi",
+  "main": "index.tsx",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "parcel index.html",
+    "build": "parcel build index.html --dist-dir dist --public-url ./"
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
-    "react-dom": "^19.2.1",
+    "jspdf": "^2.5.1",
     "react": "^19.2.1",
-    "jspdf": "2.5.1"
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "parcel": "^2.12.0",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.3",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0"
   }
 }
