--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "orangeguard-surveillance",
+  "name": "camhome-surveillance",
   "version": "1.0.0",
-  "description": "Dashboard de vigilancia Orange Pi",
+  "description": "Dashboard de vigilancia Orange Pi - CamHome",
   "main": "index.tsx",
   "scripts": {
     "start": "parcel index.html",
