--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Dashboard de vigilancia Orange Pi - CamHome",
   "main": "index.tsx",
   "scripts": {
+    "prebuild": "npm install",
     "start": "parcel index.html",
     "build": "parcel build index.html --dist-dir dist --public-url ./"
   },
