--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
+
 {
   "name": "camhome-surveillance",
   "version": "1.0.0",
   "description": "Dashboard de vigilancia Orange Pi - CamHome",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir dist --public-url ./"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html --dist-dir dist --public-url ./",
+    "start": "node server.js"
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
+    "express": "^4.19.2",
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
