--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "parcel index.html",
     "build": "rm -rf dist .parcel-cache && parcel build index.html --dist-dir dist --public-url /",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start:prod": "pm2 start ecosystem.config.js",
+    "stop:prod": "pm2 delete ecosystem.config.js",
+    "logs": "pm2 logs camhome-backend"
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
